--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.3",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
