--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dev": "next dev -p 3002",
     "build": "next build",
     "start": "concurrently \"next start -p 3002\" \"node server.js\"",
-    "start-express": "node your-server-file.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -28,6 +27,7 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "jest": "^29.7.0"
   },
   "engines": {
