--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-modal": "^3.16.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "concurrently": "^8.2.2"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
