--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "concurrently \"next start -p 3002\" \"node server.js\"",
+    "start": "concurrently \"next start -p 3002\" \"node server/server.mjs\"",
     "lint": "next lint"
   },
   "dependencies": {
