--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "8.49.0",
@@ -24,11 +25,9 @@
     "react-modal": "^3.16.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "tailwindcss": "3.3.3",
-    "concurrently": "^8.2.2"
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
     "jest": "^29.7.0"
   },
   "engines": {
