--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "concurrently \"next start -p 3002\" \"node server/server.mjs\"",
+    "heroku-postbuild": "cd server && npm install && npm run build",
+    "start": "next start -p PORT",
     "lint": "next lint"
   },
   "dependencies": {
