--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 3002",
     "build": "next build",
     "heroku-postbuild": "cd server && npm install && npm run build",
-    "start": "next start -p PORT",
+    "start": "next start -p 3002",
     "lint": "next lint"
   },
   "dependencies": {
