--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3002",
     "build": "next build",
-    "heroku-postbuild": "cd server && npm install && npm run build",
-    "start": "next start -p $PORT",
+    "start": "concurrently \"next start -p 3002\" \"cd server node server.mjs\"",
     "lint": "next lint"
   },
   "dependencies": {
