--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3002",
     "build": "next build",
-    "start": "cd server node server.mjs",
+    "start": "concurrently \"cd server && node server.mjs\"\"next start -p $PORT\" ",
     "lint": "next lint"
   },
   "dependencies": {
